--- a/WebAppTest/Views/Home/Cars.cshtml
+++ b/WebAppTest/Views/Home/Cars.cshtml
@@ -45,3 +45,11 @@
     }
     </tbody>
 </table>
+<h5>Фильтр</h5>
+<form method="get" asp-action="f">
+    <input type="text" name="searchNumber">
+    <input type="text" name="searchBrand">
+    <input type="text" name="searchModel">
+    <input type="text" name="searchColor">
+    <input type="submit"></input>
+</form>
