--- a/WebAppTest/Views/Home/Index.cshtml
+++ b/WebAppTest/Views/Home/Index.cshtml
@@ -5,17 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <h2>Тест использования ASP</h2>
-    <h2>User form</h2>
-    <form method="get">
-        <p>Name: <input name="name" /></p>
-        <p>Age: <input name="age" type="number" /></p>
-        <input type="submit" value="Send" />
-    </form>
-    <h2 class="cl1"></h2>
-    <h2>User form</h2>
-    <form method="get">
-        <input type="text" id="uname" name="name" value="Lower case, all one word"/>
-    </form>
+    <h1 class="display-4">Добро пожаловать</h1>
+    <h2>Web-приложение для работы с базой данных Cars</h2>
 </div>
