Добавлены страницы для всех таблиц

--- a/WebAppTest/wwwroot/css/site.css
+++ b/WebAppTest/wwwroot/css/site.css
@@ -21,21 +21,33 @@ body {
   margin-bottom: 60px;
 }
 
-.demotable {
-    counter-reset: schetchik -1; /* счётчик с названием "schetchik" работает в рамках класса .demotable */
-}
+.database {
 
-    .demotable tr {
-        counter-increment: schetchik; /* при встрече тега tr счётчик с названием "schetchik" увеличивается на единицу */
+}
+    .database th {
+        border: 1px solid rgb(0, 0, 0);
     }
 
-        .demotable tr:before {
-            padding: .1em .5em;
-            border: 1px solid;
+    .database td {
+        border: 1px solid rgb(0, 0, 0);
+    }
+        .database td > input {
+            outline: none;
+            border: none;
         }
 
-        .demotable tr:before {
-            content: counter(schetchik); /* значение счётчика с названием "schetchik" записывается в первую клетку строки */
-            display: table-cell;
-            vertical-align: middle;
+        .database td > form > input {
+            outline: none;
+            border: none;
         }
+
+        .database td:last-child {
+            border: none;
+        }
+            .database td:last-child > input {
+                border: 1px solid rgb(0, 0, 0);
+            }
+
+            .database td:last-child > form > input {
+                border: 1px solid rgb(0, 0, 0);
+            }
