--- a/WebAppTest/Views/Cars/Index.cshtml
+++ b/WebAppTest/Views/Cars/Index.cshtml
@@ -1,24 +1,26 @@
 ﻿@using WebAppTest.Models
-@model WebAppTest.ViewModels.ViewModel
+@model WebAppTest.ViewModels.CarsViewModel
 @{
     ViewData["Title"] = "Таблица: Машины";
 }
 <h2>Машины</h2>
 <h6>Фильтр</h6>
-<table>
+<table class="database">
     <thead>
-        <th style="border: 1px outset rgb(0, 0, 0);">Номер</th>
-        <th style="border: 1px outset rgb(0, 0, 0);">Бренд</th>
-        <th style="border: 1px outset rgb(0, 0, 0);">Модель</th>
-        <th style="border: 1px outset rgb(0, 0, 0);">Цвет</th>
+        <th >Номер</th>
+        <th >Бренд</th>
+        <th >Модель</th>
+        <th >Цвет</th>
     </thead>
     <tbody>
         <form method="get" asp-action="Filter">
             <tr>
-                <td style="border: 1px outset rgb(0, 0, 0);">
-                    <input type="text" name="searchNumber"/>
+                <td>
+                    <input type="text" name="searchNumber" 
+                        pattern="^[А-ЯA-Z]{1}[0-9]{3}[А-ЯA-Z]{2}[0-9]{2,3}$"
+                        title="A111AA111"/>
                 </td>
-                <td style="border: 1px outset rgb(0, 0, 0);">
+                <td>
                     <select name="brand">
                     @foreach (Brand brand in Model.Brands)
                     {
@@ -26,22 +28,16 @@
                     }
                     </select>
                 </td>
-                <td style="border: 1px outset rgb(0, 0, 0);">
-                    <input type="text" name="searchModel"/>
-                </td>
-                <td style="border: 1px outset rgb(0, 0, 0);">
-                    <input type="text" name="searchColor"/>
-                </td>
-                <td>
-                    <input type="submit" value="Применить"/>
-                </td>
+                <td><input type="text" name="searchModel"/></td>
+                <td><input type="text" name="searchColor"/></td>
+                <td><input type="submit" value="Применить"/></td>
             </tr>
         </form>
     </tbody>
 </table>
 <p></p>
 <h6>Найденная информация</h6>
-<table>
+<table class="database">
     <thead>
         <th style="border: 1px outset rgb(0, 0, 0);">Номер</th>
         <th style="border: 1px outset rgb(0, 0, 0);">Бренд</th>
@@ -52,13 +48,15 @@
     @foreach (Car car in Model.Cars)
     {
         <tr>
-            <td style="border: 1px outset rgb(0, 0, 0);">
+            <td>
                 <form method="get" asp-action="Edit">
                     <input type="hidden" name="number" value=@car.Number />
-                    <input type="text" name="newNumber" value=@car.Number />
+                    <input type="text" name="newNumber" value=@car.Number 
+                        pattern="^[А-ЯA-Z]{1}[0-9]{3}[А-ЯA-Z]{2}[0-9]{2,3}$"
+                        title="A111AA111"/>
                 </form>
             </td>
-            <td style="border: 1px outset rgb(0, 0, 0);">
+            <td>
                 <form method="get" asp-action="Edit">
                     <input type="hidden" name="number" value=@car.Number />
                     <select name="brand">
@@ -76,13 +74,13 @@
                     </select>
                 </form>
             </td>
-            <td style="border: 1px outset rgb(0, 0, 0);">
+            <td>
                 <form method="get" asp-action="Edit">
                     <input type="hidden" name="number" value=@car.Number />
                     <input type="text" name="model" value=@car.Model />
                 </form>
             </td>
-            <td style="border: 1px outset rgb(0, 0, 0);">
+            <td>
                 <form method="get" asp-action="Edit">
                     <input type="hidden" name="number" value=@car.Number />
                     <input type="text" name="color" value=@car.Color />
@@ -101,28 +99,32 @@
 <p></p>
 <h6>Добавление элемента</h6>
 <div>
-    <form method="get" asp-action="Add">
-    <tr>
-        <td style="border: 1px outset rgb(0, 0, 0);">
-            <input type="text" name="number" required/>
-        </td>
-        <td style="border: 1px outset rgb(0, 0, 0);">
-            <select name="brand">
-            @foreach (Brand brand in Model.Brands)
-            {
-                <option value=@brand.Title>@brand.Title</option>    
-            }
-            </select>
-        </td>
-        <td style="border: 1px outset rgb(0, 0, 0);">
-            <input type="text" name="model" required/>
-        </td>
-        <td style="border: 1px outset rgb(0, 0, 0);">
-            <input type="text" name="color" required/>
-        </td>
-        <td>
-            <input type="submit" value="Добавить" required/>
-        </td>
-    </tr>
-</form>
+    <table class="database">
+        <form method="get" asp-action="Add">
+            <tr>
+                <td>
+                    <input type="text" name="number" required 
+                        pattern="^[А-ЯA-Z]{1}[0-9]{3}[А-ЯA-Z]{2}[0-9]{2,3}$"
+                        title="A111AA111"/>
+                </td>
+                <td>
+                    <select name="brand">
+                    @foreach (Brand brand in Model.Brands)
+                    {
+                        <option value=@brand.Title>@brand.Title</option>    
+                    }
+                    </select>
+                </td>
+                <td>
+                    <input type="text" name="model" required/>
+                </td>
+                <td>
+                    <input type="text" name="color" required/>
+                </td>
+                <td>
+                    <input type="submit" value="Добавить" required/>
+                </td>
+            </tr>
+        </form>
+    </table>
 </div>
