--- a/WebAppTest/Views/Brands/Index.cshtml
+++ b/WebAppTest/Views/Brands/Index.cshtml
@@ -3,6 +3,10 @@
 @{
     ViewData["Title"] = "Бренды";
 }
+@if (Model.Error != null)
+{
+     <div class="error">@Model.Error</div>   
+}
 <h2>Бренды</h2>
 <h6>Фильтр</h6>
 <table class="database">
