--- a/WebAppTest/Views/Cars/Index.cshtml
+++ b/WebAppTest/Views/Cars/Index.cshtml
@@ -3,6 +3,10 @@
 @{
     ViewData["Title"] = "Таблица: Машины";
 }
+@if (Model.Error != null)
+{
+    <div class="error">@Model.Error</div>   
+}
 <h2>Машины</h2>
 <h6>Фильтр</h6>
 <table class="database">
@@ -21,7 +25,8 @@
                         title="A111AA111"/>
                 </td>
                 <td>
-                    <select name="brand">
+                    <select name="searchBrand">
+                        <option value="">Все</option>
                     @foreach (Brand brand in Model.Brands)
                     {
                         <option value=@brand.Title>@brand.Title</option>    
@@ -50,7 +55,7 @@
         <tr>
             <td>
                 <form method="get" asp-action="Edit">
-                    <input type="hidden" name="number" value=@car.Number />
+                    <input type="hidden" name="id" value=@car.Number />
                     <input type="text" name="newNumber" value=@car.Number 
                         pattern="^[А-ЯA-Z]{1}[0-9]{3}[А-ЯA-Z]{2}[0-9]{2,3}$"
                         title="A111AA111"/>
@@ -58,7 +63,7 @@
             </td>
             <td>
                 <form method="get" asp-action="Edit">
-                    <input type="hidden" name="number" value=@car.Number />
+                    <input type="hidden" name="id" value=@car.Number />
                     <select name="brand">
                     @foreach (Brand brand in Model.Brands)
                     {
@@ -76,19 +81,19 @@
             </td>
             <td>
                 <form method="get" asp-action="Edit">
-                    <input type="hidden" name="number" value=@car.Number />
+                    <input type="hidden" name="id" value=@car.Number />
                     <input type="text" name="model" value=@car.Model />
                 </form>
             </td>
             <td>
                 <form method="get" asp-action="Edit">
-                    <input type="hidden" name="number" value=@car.Number />
+                    <input type="hidden" name="id" value=@car.Number />
                     <input type="text" name="color" value=@car.Color />
                 </form>
             </td>
             <td>
                 <form method="get" asp-action="Delete">
-                    <input type="hidden" name="number" value=@car.Number />
+                    <input type="hidden" name="id" value=@car.Number />
                     <input type="submit" value="Удалить" />
                 </form>
             </td>
