--- a/WebAppTest/Views/Brands/Index.cshtml
+++ b/WebAppTest/Views/Brands/Index.cshtml
@@ -28,6 +28,12 @@
 </table>
 <p></p>
 <h6>Найденная информация</h6>
+@if (Model.Brands.Count() == 0)
+{
+<p>Не найденно ни одной записи, удовалетворяющей условию</p>
+}
+else
+{
 <table class="database">
     <thead>
         <th>название</th>
@@ -39,25 +45,25 @@
     {
         <tr>
             <td>
-                <form method="get" asp-action="Edit">
+                <form method="post" asp-action="Edit">
                     <input type="hidden" name="id" value=@e.Title />
                     <input type="text" name="title" value=@e.Title />
                 </form>
             </td>
             <td>
-                <form method="get" asp-action="Edit">
+                <form method="post" asp-action="Edit">
                     <input type="hidden" name="id" value=@e.Title />
                     <input type="text" name="fullTitle" value="@e.FullTitle" />
                 </form>
             </td>
             <td>
-                <form method="get" asp-action="Edit">
+                <form method="post" asp-action="Edit">
                     <input type="hidden" name="id" value=@e.Title />
                     <input type="text" name="country" value=@e.Country />
                 </form>
             </td>
             <td>
-                <form method="get" asp-action="Delete">
+                <form method="post" asp-action="Delete">
                     <input type="hidden" name="id" value=@e.Title />
                     <input type="submit" value="Удалить" />
                 </form>
@@ -66,11 +72,12 @@
     }
     </tbody>
 </table>
+}
 <p></p>
 <h6>Добавление элемента</h6>
 <div>
     <table class="database">
-        <form method="get" asp-action="Add">
+        <form method="post" asp-action="Add">
             <tr>
                 <td>
                     <input type="text" name="title" required/>
