--- a/WebAppTest/Views/Shared/_Layout.cshtml
+++ b/WebAppTest/Views/Shared/_Layout.cshtml
@@ -23,9 +23,6 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Cars">Машины</a>
                         </li>
                         <li class="nav-item">
@@ -38,7 +35,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Mileages">Километраж</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Accidents">Аварии</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Accidents">Происшествия</a>
                         </li>
                     </ul>
                 </div>
@@ -53,7 +50,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - База данных: Машины - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2024 - База данных: Машины
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
