--- a/WebAppTest/Views/Cars/Index.cshtml
+++ b/WebAppTest/Views/Cars/Index.cshtml
@@ -42,6 +42,12 @@
 </table>
 <p></p>
 <h6>Найденная информация</h6>
+@if (Model.Cars.Count() == 0)
+{
+<p>Не найденно ни одной записи, удовалетворяющей условию</p>
+}
+else
+{
 <table class="database">
     <thead>
         <th style="border: 1px outset rgb(0, 0, 0);">Номер</th>
@@ -54,7 +60,7 @@
     {
         <tr>
             <td>
-                <form method="get" asp-action="Edit">
+                <form method="post" asp-action="Edit">
                     <input type="hidden" name="id" value=@car.Number />
                     <input type="text" name="newNumber" value=@car.Number 
                         pattern="^[А-ЯA-Z]{1}[0-9]{3}[А-ЯA-Z]{2}[0-9]{2,3}$"
@@ -62,7 +68,7 @@
                 </form>
             </td>
             <td>
-                <form method="get" asp-action="Edit">
+                <form method="post" asp-action="Edit">
                     <input type="hidden" name="id" value=@car.Number />
                     <select name="brand">
                     @foreach (Brand brand in Model.Brands)
@@ -80,19 +86,19 @@
                 </form>
             </td>
             <td>
-                <form method="get" asp-action="Edit">
+                <form method="post" asp-action="Edit">
                     <input type="hidden" name="id" value=@car.Number />
                     <input type="text" name="model" value=@car.Model />
                 </form>
             </td>
             <td>
-                <form method="get" asp-action="Edit">
+                <form method="post" asp-action="Edit">
                     <input type="hidden" name="id" value=@car.Number />
                     <input type="text" name="color" value=@car.Color />
                 </form>
             </td>
             <td>
-                <form method="get" asp-action="Delete">
+                <form method="post" asp-action="Delete">
                     <input type="hidden" name="id" value=@car.Number />
                     <input type="submit" value="Удалить" />
                 </form>
@@ -101,11 +107,12 @@
     }
     </tbody>
 </table>
+}
 <p></p>
 <h6>Добавление элемента</h6>
 <div>
     <table class="database">
-        <form method="get" asp-action="Add">
+        <form method="post" asp-action="Add">
             <tr>
                 <td>
                     <input type="text" name="number" required 
