--- a/WebAppTest/Views/Mileages/Index.cshtml
+++ b/WebAppTest/Views/Mileages/Index.cshtml
@@ -44,50 +44,59 @@
 </table>
 <p></p>
 <h6>Найденная информация</h6>
-<table class="database">
-    <thead>
-        <th>Номер</th>
-        <th>Дата</th>
-        <th>Значение</th>
-    </thead>
-    <tbody>
-    @foreach (Mileage e in Model.Mileages)
-    {
-        <tr>
-            <td>
-                <form method="get" asp-action="Edit">
-                    <input type="hidden" name="id" value=@e.Id />
-                    <input type="text" name="newNumber" value=@e.Number />
-                </form>
-            </td>
-            <td>
-                <form method="get" asp-action="Edit">
-                    <input type="hidden" name="id" value=@e.Id />
-                    <input type="date" name="date" 
-                        value=@GetDate(e.FixationDate) />
-                </form>
-            </td>
-            <td>
-                <form method="get" asp-action="Edit">
-                    <input type="hidden" name="id" value=@e.Id />
-                        <input type="number" name="value" value=@e.FixationValue min="0" />
-                </form>
-            </td>
-            <td>
-                <form method="get" asp-action="Delete">
-                    <input type="hidden" name="id" value=@e.Id />
-                    <input type="submit" value="Удалить" />
-                </form>
-            </td>
-        </tr>
-    }
-    </tbody>
-</table>
+@if (Model.Mileages.Count() == 0)
+{
+    <p>Не найденно ни одной записи, удовалетворяющей условию</p>
+}
+else
+{
+    <table class="database">
+        <thead>
+            <th>Номер</th>
+            <th>Дата</th>
+            <th>Значение</th>
+        </thead>
+        <tbody>
+            @foreach (Mileage e in Model.Mileages)
+            {
+                <tr>
+                    <td>
+                        <form method="post" asp-action="Edit">
+                            <input type="hidden" name="id" value=@e.Id />
+                            <input type="text" name="newNumber" value=@e.Number />
+                        </form>
+                    </td>
+                    <td>
+                        <form method="post" asp-action="Edit">
+                            <input type="hidden" name="id" value=@e.Id />
+                            <input type="date" name="date" 
+                                value=@GetDate(e.FixationDate) />
+                            <input class="sub" type="submit" value="S" />
+                        </form>
+                    </td>
+                    <td>
+                        <form method="post" asp-action="Edit">
+                            <input type="hidden" name="id" value=@e.Id />
+                                <input type="number" name="value" value=@e.FixationValue min="0" />
+                        </form>
+                    </td>
+                    <td>
+                        <form method="post" asp-action="Delete">
+                            <input type="hidden" name="id" value=@e.Id />
+                            <input type="submit" value="Удалить" />
+                        </form>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>    
+}
+
 <p></p>
 <h6>Добавление элемента</h6>
 <div>
     <table class="database">
-        <form method="get" asp-action="Add">
+        <form method="post" asp-action="Add">
             <tr>
                 <td>
                     <input type="text" name="number" required/>
