--- a/WebAppTest/Views/Home/Index.cshtml
+++ b/WebAppTest/Views/Home/Index.cshtml
@@ -6,4 +6,6 @@
 <div class="text-center">
     <h1 class="display-4">Добро пожаловать</h1>
     <h2>Web-приложение для работы с базой данных Cars</h2>
+    <h3>Схема базы данных</h3>
+    <img src=@Url.Content("~/db.png") height="500" weight="500" />
 </div>
