--- a/WebAppTest/Views/Mileages/Index.cshtml
+++ b/WebAppTest/Views/Mileages/Index.cshtml
@@ -34,7 +34,11 @@
     <tbody>
         <form method="get" asp-action="Filter">
             <tr>
-                <td><input type="text" name="number"/></td>
+                <td>
+                    <input type="text" name="number" 
+                        pattern="^[А-ЯA-Z]{1}[0-9]{3}[А-ЯA-Z]{2}[0-9]{2,3}$"
+                        title="A111AA111"/> 
+                </td>
                 <td><input type="date" name="date"/></td>
                 <td><input type="number" name="value" min="0"/></td>
                 <td><input type="submit" value="Применить"/></td>
@@ -63,7 +67,9 @@ else
                     <td>
                         <form method="post" asp-action="Edit">
                             <input type="hidden" name="id" value=@e.Id />
-                            <input type="text" name="newNumber" value=@e.Number />
+                            <input type="text" name="newNumber" value=@e.Number 
+                                pattern="^[А-ЯA-Z]{1}[0-9]{3}[А-ЯA-Z]{2}[0-9]{2,3}$"
+                                title="A111AA111"/>
                         </form>
                     </td>
                     <td>
@@ -99,7 +105,9 @@ else
         <form method="post" asp-action="Add">
             <tr>
                 <td>
-                    <input type="text" name="number" required/>
+                    <input type="text" name="number" required 
+                        pattern="^[А-ЯA-Z]{1}[0-9]{3}[А-ЯA-Z]{2}[0-9]{2,3}$"
+                        title="A111AA111"/>
                 </td>
                 <td>
                     <input type="date" name="date" required/>
