--- a/WebAppTest/Views/Owners/Index.cshtml
+++ b/WebAppTest/Views/Owners/Index.cshtml
@@ -54,7 +54,7 @@ else
             <td>
                 <form method="get" asp-action="Edit">
                     <input type="hidden" name="id" value=@owner.Id />
-                    <input type="text" name="newNumber" value=@owner.Number
+                        <input type="text" name="newNumber" value=@owner.Number
                         pattern="^[А-ЯA-Z]{1}[0-9]{3}[А-ЯA-Z]{2}[0-9]{2,3}$"
                         title="A111AA111"/>
                 </form>
@@ -100,13 +100,13 @@ else
                         title="A111AA111"/>
                 </td>
                 <td>
-                    <input type="text" name="secondName" required/>
+                    <input type="text" name="secondName" />
                 </td>
                 <td>
                     <input type="text" name="name" required/>
                 </td>
                 <td>
-                    <input type="text" name="surname" required/>
+                    <input type="text" name="surname" />
                 </td>
                 <td>
                     <input type="submit" value="Добавить" required/>
