--- a/WebAppTest/Views/Accidents/Index.cshtml
+++ b/WebAppTest/Views/Accidents/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using WebAppTest.Models
-@model WebAppTest.ViewModels.AccidentsViewModel
+﻿@using WebAppDataBaseCars.Models
+@model WebAppDataBaseCars.ViewModels.AccidentsViewModel
 
 @functions {
     public string GetDate(DateOnly date)
