--- a/WebAppTest/Views/Brands/Index.cshtml
+++ b/WebAppTest/Views/Brands/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@using WebAppTest.Models
-@model WebAppTest.ViewModels.BrandsViewModel
+﻿@using WebAppDataBaseCars.ViewModels
+@using WebAppDataBaseCars.Models
+@model BrandsViewModel
 @{
     ViewData["Title"] = "Бренды";
 }
