--- a/WebAppTest/Views/Cars/Index.cshtml
+++ b/WebAppTest/Views/Cars/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using WebAppTest.Models
-@model WebAppTest.ViewModels.CarsViewModel
+﻿@using WebAppDataBaseCars.Models
+@model WebAppDataBaseCars.ViewModels.CarsViewModel
 @{
     ViewData["Title"] = "Таблица: Машины";
 }
