--- a/WebAppTest/Views/Mileages/Index.cshtml
+++ b/WebAppTest/Views/Mileages/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using WebAppTest.Models
-@model WebAppTest.ViewModels.MileagesViewModel
+﻿@using WebAppDataBaseCars.Models
+@model WebAppDataBaseCars.ViewModels.MileagesViewModel
 
 @functions {
     public string GetDate(DateOnly date)
