--- a/WebAppTest/Views/Owners/Index.cshtml
+++ b/WebAppTest/Views/Owners/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using WebAppTest.Models
-@model WebAppTest.ViewModels.OwnersViewModel
+﻿@using WebAppDataBaseCars.Models
+@model WebAppDataBaseCars.ViewModels.OwnersViewModel
 @{
     ViewData["Title"] = "Владельцы";
 }
