--- a/WebAppTest/Views/_ViewImports.cshtml
+++ b/WebAppTest/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using WebAppTest
-@using WebAppTest.Models
+﻿@using WebAppDataBaseCars
+@using WebAppDataBaseCars.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
